# clipboard

./: LICENSE  README.md  README_zh-CN.md  components.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts  x.md
.github/workflows/: deploy-docs.yml  release.yml
scripts/: merge-latest-json.mjs  release.js  release.mjs  updater.mjs
src/: App.vue  app.css  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  models.rs  monitor.rs  ocr.rs  state.rs  tray.rs  utils.rs
src/components/: ItemEditorDialog.vue  LocalImage.vue
src/components/ui/alert-dialog/: ConfirmProvider.vue
src/components/ui/button/: Button.vue
src/components/ui/dialog/: DialogContent.vue
src/components/ui/input/: Input.vue
src/composables/: useClipboard.ts  useConfirm.ts  useSettings.ts  useTimeAgo.ts  useToast.ts
src/views/: MainWindow.vue  PopupWindow.vue
website/: docusaurus.config.ts  package.json  pnpm-lock.yaml
website/docs/: development.md  installation.md  intro.md  user-guide.md
website/i18n/zh-CN/: code.json
website/i18n/zh-CN/docusaurus-plugin-content-docs/current/: development.md  installation.md  intro.md  user-guide.md
website/i18n/zh-CN/docusaurus-theme-classic/: footer.json  navbar.json
website/src/components/HomepageFeatures/: index.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
