[package]
name = "clipboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
chrono = "0.4.42"
image = "0.25.9"
base64 = "0.22.1"
mouse_position = "0.1.4"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2.7.1"
log = "0.4.29"
clipboard-master = "4.0.0"
active-win-pos-rs = "0.9.1"
home = "0.5.9"
rusqlite = { version = "0.37.0", features = ["bundled"] }
aes-gcm = "0.10.3"
rand = "0.9.2"
tauri-plugin-fs = "2.4.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

